.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

3.3rc1 - UNRELEASED
-------------------

 - Make the Groups Overview search post back to the same page, since it displays a
   lot more useful information than the prefs_user_group_search, and fits more
   with the way the Users Overview works. Include a "Show all" button as well. 
   [esteele]


3.3b1 - March 12, 2009
----------------------

- Replace the workflow history portlet with a content history portlet
  for newly created sites. This implements PLIP 243.
  [wichert]

- Changed most actions to now use the globals_view/navigationRootUrl. Updated
  the CMFCalendar tool override to allow the calendar portlet to allow passing
  in kwargs such as path.  Fixed skin templates and scripts to use the
  @@plone_portal_state/navigation_root_url instead of portal_url.
  This implements http://plone.org/products/plone/roadmap/234
  [calvinhp]
 
- Removed CatalogTool.ExtensibleIndexableObjectWrapper in favour of the
  wrapper in plone.indexer, and made registerIndexableAttribute() a deprecated
  facade for registering an IIndexer adapter. See plone.indexer for more
  information about the correct (and more robust) way to register custom
  indexers.
  [optilude]

- Removed the `Reinstall` button from the `Add/Remove products` control panel.
  Users would constantly mistake it as an upgrade mechanism, which Plone does
  not yet support in a structured way.
  [hannosch]

- Added an option in the Site Settings configlet to disable TTW locking
  entirely.  Also fixed a couple bugs with unlocking and made it so the
  lock gets refreshed as long as an editor is on the edit page.
  This implements http://plone.org/products/plone/roadmap/240

- Added a 'redirect_links' site property and corresponding 'Redirect
  immediately to link target' setting in the types configlet (for the Link type