@@ -148,18 +148,13 @@ class TestBaseNavTree(PloneTestCase.PloneTestCase):
         self.assertEqual(tree['children'][-1]['show_children'],False)
 
     def testCreateNavTreeWithLink(self):
+        # BBB getRemoteURL deprecated, remove in Plone 4
         view = self.view_class(self.portal, self.request)
         tree = view.navigationTree()
         for child in tree['children']:
             if child['portal_type'] != 'Link':
-                # the brain still has getRemoteUrl as BBB for plip126
                 self.failIf(child['item'].getRemoteUrl)
-                # but the child dict doesn't have getRemoteUrl
-                self.failIf(child.has_key('getRemoteUrl'))
             if child['Title'] == 'link1':
-                # BBB getRemoteUrl could be removed because the behavior is
-                # configurable via redirect_links property and plip126 
-                # default link view
                 self.failUnlessEqual(child['item'].getRemoteUrl, 'http://plone.org')
 
     def testNonStructuralFolderHidesChildren(self):
