@@ -8,6 +8,14 @@ Changelog
 3.3rc1 - UNRELEASED
 -------------------
 
+ - Re-added the 'getRemoteUrl' and 'link_remote' attributes of the navtree
+   decorator, which were lost during the implementation of PLIP 126.  Note
+   that these attributes are deprecated and will not be available in Plone 4.
+   Custom navigation templates using these attributes should simply link to
+   the Link object, whose default view now takes care of redirecting based on
+   the value of the global 'redirect_links' property.
+   [davisagli]
+
  - Make the Groups Overview search post back to the same page, since it displays a
    lot more useful information than the prefs_user_group_search, and fits more
    with the way the Users Overview works. Include a "Show all" button as well. 
